adding first attempt at gilded rose kata in prolog

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Exercises and experiments from the 7 languages in 7 weeks book.
+Exercises and experiments from the 7 languages in 7 weeks book. (Bruce A. Tate)
